--- a/site.yml
+++ b/site.yml
@@ -18,7 +18,7 @@
       changed_when: false
     when: ansible_distribution == "Ubuntu"
 
-- hosts: all
+- hosts: myhosts 
   become: true
   roles:
     - base    
